# html-languageservice

./: Cargo.toml  README.md  test.sh
examples/parse-speed/: index.html  main.rs
src/: html_data.rs  html_language_service.rs  html_language_types.rs  lib.rs  log.rs  main.rs  participant.rs
src/beautify/: beautify_html.rs  mod.rs
src/language_facts/: data_manager.rs  data_provider.rs  mod.rs  web_custom_data.rs
src/parser/: html_document.rs  html_entities.rs  html_parse.rs  html_scanner.rs  mod.rs
src/services/: html_completion.rs  html_folding.rs  html_formatter.rs  html_highlight.rs  html_hover.rs  html_linked_editing.rs  html_links.rs  html_matching_tag_position.rs  html_rename.rs  html_selection_range.rs  html_symbols.rs  mod.rs
src/utils/: markdown.rs  markup.rs  mod.rs  strings.rs  uri.rs
tests/: completion.rs  folding.rs  formatter.rs  highlight.rs  hover.rs  linked_editing.rs  links.rs  matching_tag_position.rs  parse.rs  rename.rs  selection_range.rs  symbols.rs
