[package]
name = "html-languageservice"
version = "0.5.1"
edition = "2021"
license = "MIT"
description = "The basics of an HTML language server."
homepage = "https://github.com/ren-wei/html-languageservice"
documentation = "https://github.com/ren-wei/html-languageservice"
repository = "https://github.com/ren-wei/html-languageservice"
readme = "README.md"
keywords = ["html", "lsp", "languageservice", "languageserver"]
categories = ["development-tools"]

[features]
experimental = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
lazy_static = "1.4.0"
lsp-textdocument = "0.3.1"
lsp-types = "0.94.1"
regex = "1.9.5"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.34.0", features = ["full"]}
