[package]
name = "html-languageservice"
version = "0.7.2"
edition = "2021"
license = "MIT"
description = "The basics of an HTML language server."
homepage = "https://github.com/ren-wei/html-languageservice"
documentation = "https://docs.rs/html-languageservice/latest/html_languageservice"
repository = "https://github.com/ren-wei/html-languageservice"
readme = "README.md"
keywords = ["html", "lsp", "languageservice", "languageserver"]
categories = ["development-tools"]

[features]

default = []

full = [
    "completion",
    "folding",
    "formatter",
    "highlight",
    "hover",
    "linked_editing",
    "links",
    "matching_tag_position",
    "rename",
    "selection_range",
    "symbols"
]

completion = []
folding = []
formatter = []
highlight = []
hover = []
linked_editing = []
links = []
matching_tag_position = []
rename = []
selection_range = []
symbols = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
lazy_static = "1.5.0"
lsp-textdocument = "0.3.2"
lsp-types = "0.94.1"
regex = "1.11.1"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"]}
